2.28.1 (2025-05-08)
-----------------------------
* Gear Widget
  - Add "show_rpm_reading" option (requested by users "ebeninca" and "EmperorOfFinland"), which shows RPM charge reading on RPM bar. This option is disabled by default.
  - Add "show_battery_reading" option, which shows battery charge reading (percentage) on battery bar. This option is disabled by default.
  - Add "decimal_places, font_size, font_weight, font_color, offset_x, text_alignment" options for customizing RPM and battery charge readings.

* Track map Widget
  - Add "show_pitout_prediction_while_requested_pitstop" option (requested by user "geims12"), which shows pit out on-track position indication while player has requested pitstop and not in pit lane. This option is enabled by default.

* Misc
  - Fixed an issue that would prevent Track Info Editor from opening while "API state override" is activated.

2.28.0 (2025-05-05)
-----------------------------
* Major change
  - New "Pit stop estimate Widget" and pit stop timing calculation for accurately estimating pit stop duration, designed specifically for "LMU".
  - New "Track Info" preset and "Track Info Editor" for customizing track info, which is currently used for various pit stop related calculation.

* [New]Pit stop estimate Widget
  - Show estimated pit-lane pass through (drive-through) time, calculated from pit-entry to pit-exit line. Average accuracy is within 0.5 seconds.
  - Show estimated pit stop time while making a service stop or serving a penalty, calculated according to each setting from MFD "Pitstop" page and underlying service timing and concurrency differences. Average accuracy is within 1 seconds.
  - Show maximum total random delay which game may add on top of pit stop time. For example, if estimated pit stop time is 12.0s, and maximum delay is +3.0s, then final pit stop time will be between 12.0s and 15.0s.