@@ -1,3 +1,8 @@
+WIP
+-----------------------------
+* Misc
+  - Fixed an issue that would add time increment on pitout prediction (Track map Widget) while outside pit lane.
+
 2.28.1 (2025-05-08)
 -----------------------------
 * Gear Widget
